<resources>
    <string name="app_name">PJM Assistant</string>
    <string name="action_settings">Settings</string>

    <!-- Main screen text-->
    <string name="homeLabel">Home</string>
    <string name="readButton">Read</string>
    <string name="speakButton">Speak</string>

    <!-- Read screen text-->
    <string name="readLabel">Read</string>
    <string name="clearButton">Clear</string>
    <string name="pauseText">Pause</string>
    <string name="startText">Start</string>
    <string name="stopText">Stop</string>
    <string name="copyButton">Copy</string>
    <string name="clipboardLabel">translation</string>
    <string name="cameraError">No camera detected</string>

    <!-- Speak screen text-->
    <string name="speakLabel">Speak</string>
    <string name="nextButton">Next</string>
    <string name="previousButton">Previous</string>

    <!-- Settings screen text-->
    <string name="settingsLabel">Settings</string>
    <string name="modelSectionLabel">Model</string>
    <string name="modelLabel">Using:</string>
    <string name="translationSectionLabel">Translation</string>
    <string name="appearanceThresholdLabel">Letter threshold</string>
    <string name="appearanceDefault">10</string>

    <!-- User messages-->
    <string name="cameraPermissionError">Failed to get camera permission, try granting it manually from settings</string>
    <string name="cameraException">Error connecting to camera</string>
    <string name="model_failed">Failed to load model</string>
    <string name="sign_not_supported">Invalid input! Only letters are supported.</string>

    <string-array name="availableModels">
        <item>American</item>
        <item>Polish</item>
    </string-array>

</resources>